--- a/changelogs/7.17.asciidoc
+++ b/changelogs/7.17.asciidoc
@@ -3,6 +3,7 @@
 
 https://github.com/elastic/apm-server/compare/7.16\...7.17[View commits]
 
+* <<release-notes-7.17.12>>
 * <<release-notes-7.17.11>>
 * <<release-notes-7.17.10>>
 * <<release-notes-7.17.9>>
@@ -15,6 +16,16 @@ https://github.com/elastic/apm-server/compare/7.16\...7.17[View commits]
 * <<release-notes-7.17.2>>
 * <<release-notes-7.17.1>>
 * <<release-notes-7.17.0>>
+
+[float]
+[[release-notes-7.17.12]]
+=== APM version 7.17.12
+
+https://github.com/elastic/apm-server/compare/v7.17.11\...v7.17.12[View commits]
+
+[float]
+==== Intake API Changes
+- Content-Type and Content-Encoding are no longer required for intake {pull}7686[7686]
 
 [float]
 [[release-notes-7.17.11]]
